Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2018-06-25 05:38:15 -0400
  - Alien::Role::Alt is now an empty role;
    alt capability is now in Alien::Build core
    this role remains for compatibility

0.03      2017-08-12 06:39:53 -0400
  - Add IRC in metadata

0.02      2017-08-04 15:03:56 -0400
  - Add missing prereq Class::Method::Modifiers

0.01      2017-08-01 14:53:34 -0400
  - initial version