@@ -29,8 +29,5 @@ Alien::Base = 0.79
 [Author::Plicease::Upload]
 cpan = 1
 
-[Author::Plicease::TravisInstall]
-repo = Perl5-Alien/Alien-Build
-
 [MetaNoIndex]
 directory = corpus
