@@ -1,15 +1,0 @@
-#!/bin/bash -x
-
-set -euo pipefail
-IFS=$'\n\t'
-
-rm -rf /tmp/Alien-Build
-
-cpanm -n Dist::Zilla
-
-
-git clone --depth 2 https://github.com/Perl5-Alien/Alien-Build.git /tmp/Alien-Build
-cd /tmp/Alien-Build
-dzil authordeps --missing | cpanm -n
-dzil listdeps   --missing | cpanm -n
-dzil install --install-command 'cpanm -n .'
