@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Deprecated.  GitHub Repository is archived.
+    Tickets can be opened on the Alien-Build issue tracker,
+    though you should just stop using this role now.
 
 0.04      2018-06-25 05:38:15 -0400
   - Alien::Role::Alt is now an empty role;
